--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,20 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: JSON Exchange by AppDev4DB
+email: mdd@appdev4db.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Currently a work in progress - rather like life iself.
+baseurl: "/JSONExchange" # the subpath of your site, e.g. /blog
+url: "https://appdev4db.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: markddrake
+github_username:  markddrake
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: minima
 plugins:
   - jekyll-feed
 
