--- a/app/package.json
+++ b/app/package.json
@@ -14,9 +14,13 @@
   "license": "SEE LICENSE IN TDB.txt",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "mariadb": "^2.1.2",
+    "mongodb": "^3.3.4",
     "mssql": "^5.1.0",
     "mysql": "^2.17.1",
     "oracledb": "^4.0.1",
