Amazon S3 Object Store Support. MySQL and MariaDB Test Optimizations. Minor Bug Fixes
Yadamu: Fix getter for PARALEL to allow 0 to be specified via in-line parameters object and command line
YadamuCLI: Fix reporting of control file name in load and unload operations
YadmauDBI: Replace workerDBI() with classFactory() to enable inheritance support when creating a Worker DBI
YadamuLoggerr: Standardize Initialization of TableWriter using 'table' message
YadamuLoggerr: Standardize termination of TableWriter
YadamuRejectManager: Standardize Initialization of TableWriter using 'table' message
YadamuRejectManager: Standardize termination of TableWriter
YadamuWriter: MoveddlComplete, reloadStatementCache, setTableInfo to initialize()
YadamuWriter: Refactor flushCache() as finalize() -WWIT
YadamuWriter: Remove orphaned finalize()
FileDBI: Pass document path to JSONParser
FileWriter: pass tableName in initialize()
FileWriter: Open Outer Array from Initialize
FileWriter: Close Outer Array in from Finalize
FileWriter:  Refactor flushCache() as finalize()
JSONParser: Abort Parse on Invalid JSON, Report document path
CSVWriter: Refactor as subclass of FileWrier. Override startOuterArray(), cacheRow(), closeOuterArray()
DatafileParser: Ingest per table data files generated by loader
JSONParser: Parse per table data files generated by loader
LoaderDBI: Refactor LoaderDBI as extension of YadamuDBI
S3DBI: Enables file storage in Amazon S3 compatible Object Stores, Extendends LoaderDBI
MariaWriter: Remove unnecessary implementation of initialize()
MongoWriter: Wait for super.initialize()
OracleWriter: pass tableName in initialize()
YadamuQA: Pass testParameters to YadamuText.reset()
regressions: set SPATIAL_MAKE_VALID false
MySQLQA: Revert changes to YADAMU_TEST that led to performance regressions
MariaDBQA: Revert changes to YADAMU_TEST that led to performance regressions

--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "license": "SEE LICENSE IN TDB.txt",
   "dependencies": {
     "@teradataprebuilt/nativelib-win32": "^1.0.0-beta.1",
+    "aws-sdk": "^2.731.0",
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
