Enable Compression with FileDBI, LoaderDBI and S3DBI. Enable staging files to Microsoft's Azure Cloud Service
Clarinet: Replace deprecated new Buffer() with Buffer.alloc()

DBReader: Add new function for managing the process of copying data to a YADAMU Export Fie
DBReader: Ensure the FileOutputStream is component of the pipeline when copying data to the file system
DBReader: Support Compression, Encryption by enabling complex Multi-Stage input  and output streams
DBReader: Clean-up gathering timings for Pipeline operations. Replace in-line code with Event Driven Code
DBReader: Define Static Constants for error handling tests
DBReader: Replace Object.keys().length > 0 with !isEmpty()
DBWriter: Clean-up gathering timings for Pipeline operations. Replace in-line code with Event Driven Code

Yadamu: Add support for lists of valid values when reading Parameters
Yadamu: Add Compression option to Parameters
Yadamu: Manage Timings
Yadamu: Add getter for DUMMY_OUTPUT_STREAM
YadamuLibary: Add isEmpty() test for objects
YadamuConstants: Define valid values for COMPRESSION, OUTPUT_FORMAT
YadamuRejectManager: Replace all 'write' operations with 'push' operations when generating JSON using FileDBI
YadamuLogger: Replace all 'write' operations with 'push' operations when generating JSON using FileDBI
YadamuLogger: Replace logging to \dev\null with no-op Output Stream
SimpleArrayReadable: Generate an Readable stream from an array. Used by YadamuLogger to generate data files.
DummyOutputStream: An output stream that generates no output. Use as a no-op logger
Pushable: A class that allows a Readable to populated dynamically. Used by YadamuRejectManager

YadamuDBI: Move SAVE_POINT_NAME to YadamuConstants
YadamuDBI: Enable driver level management of timings
YadamuDBI: Renovate SQL Tracing and SQL Trace File Management
YadamuParser: Refactor counter as rowCount

YadamuWriter: Refactor as Transform . Enables complex multistage pipelines
YadaumuWriter: Refactor AbortWriter as AbortTable
Ya

--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "author": "Mark D Drake",
   "license": "SEE LICENSE IN TDB.txt",
   "dependencies": {
+    "@azure/storage-blob": "^12.2.0-preview.1",
     "@teradataprebuilt/nativelib-win32": "^1.0.0-beta.1",
     "aws-sdk": "^2.731.0",
     "bootstrap": "^4.4.1",
@@ -21,11 +22,13 @@
     "express-session": "^1.17.1",
     "ffi-napi": "^3.0.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jquery": "^3.5.0",
     "mariadb": "^2.3.1",
     "mongodb": "^3.5.7",
     "mssql": "^6.2.0",
     "mysql": "^2.18.1",
+    "npm": "^6.14.8",
     "oracledb": "^4.2.0",
     "pg": "^8.0.3",
     "pg-copy-streams": "^2.2.2",
