General Bug Fixes and Improvements.. MongoDB driver is now production ready
dbReader: Add Database Version to Ready Message
dbWriter: add Database Version to Ready Message
Pushable: Fix handling of pause(), resume() and is Paused()
YadamuDBI: Define default database version as N/A
YadamuDBI: Throw original cause of connection failure when reconnect fails
YadamuLibrary: Fix algorithm for identifying Boolean data types
YadamuRejectLibrary: Fix caching of rejected records in Pushable() prior to pipeline initialization
YadamuWriter: finalize(): Wait for current batchComplete before performing finalize process
YadamuWriter: Check skipTable before calling writeBatch incase skipTable was set while waiting for batchComplete
YadamuWriter: Cache all BatchWritten promises and ensure all are resolved before completing finalize()
ErrorWriter: Handle errors while writing error log
MariaDBI: Get database version when establishing database connection
MariaDBI: Manage System Information query results as an array rather than an object.
MariaDBI: Set size to ''' when mapping tinyint(3) to boolean
MariaDBI: Get Database Version
MongoWriter: Convert numeric string to numbers before writing data
MongoDBI: Fix detection of Boolean data types
MsSQLDBI: Use StringDecoder to convert Buffer to String when uploading JSON files into SQL Server
MsSQLDBI: Fix detection of closed connections
MsSQLDBI: Correct mapping of MongoDB string datatypes
MsSQLDBI: Add code to recover from unexpected Rollback operations originating in the TDS layer
MsSQLDBI: Add ISJON constraints to columns containing JSON data
MsSQLDBI: Treat columns with ISJON constraint as instances of JSON data type
MsSQLDBI: Set size to ''' when mapping tinyint(3) to boolean
MySQLDBI: Add commit after JSON_TABLE based upload operation
MySQLWriter: Recode GeoJSON  as WKT to avoid Lat/Lon ordering  issues
MsSQLQA: Restrict spatial comparisons to 15 digits with MongoDB
MsSQLQA: Optimize compare schema operations
MsSQLQA: Add sp_jsonCompact

--- a/dockerfiles/regression/Dockerfile
+++ b/dockerfiles/regression/Dockerfile
@@ -7,4 +7,4 @@ COPY dockerfiles/regression/yadamuTestDefaults.json app/YADAMU/common/yadamuDefa
 COPY dockerfiles/regression/tnsnames.ora .
 COPY dockerfiles/regression/connections.json qa/regression
 ENV TNS_ADMIN=/usr/src/YADAMU
-cmd /bin/bash bin/chooseTest.sh 
+ENTRYPOINT ["/bin/bash", "/usr/src/YADAMU/bin/chooseTest.sh", "$YADAMU_TEST_NAME"]
