--- a/src/package.json
+++ b/src/package.json
@@ -24,7 +24,8 @@
     "font-awesome": "^4.7.0",
     "install": "^0.13.0",
     "jquery": "^3.5.0",
-    "mariadb": "^2.3.1",
+    "mariadb": "^2.5.2",
+    "mime-types": "^2.1.28",
     "mongodb": "^3.5.7",
     "mssql": "^6.2.3",
     "mysql": "^2.18.1",
@@ -32,7 +33,7 @@
     "oracledb": "^4.2.0",
     "pg": "^8.0.3",
     "pg-copy-streams": "^2.2.2",
-    "pg-query-stream": "^2.1.2",
+    "pg-query-stream": "^4.0.0",
     "popper.js": "^1.16.1",
     "snowflake-sdk": "^1.5.2",
     "teradata-nodejs-driver": "^1.0.0-rc.2",
