Add Vertica Driver Preview
Fix #93
Fix #99
Fix #100
Fix #101
Fix #102

--- a/qa/regression/snowflakeTestSuite.json
+++ b/qa/regression/snowflakeTestSuite.json
@@ -10,6 +10,7 @@
   , "source"          : "file-JSON"
   , "target"          : "snow#1"
   , "importPath"      : "%location%"
+  , "verifyOperation" : true
   , "parameters"      : {
       "XML_STORAGE_MODEL" : "VARIANT"
     }
