--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 **/node_modules
 deploy.bat
 dockerfiles/software/oracle/oracle-instantclient19.5-basic_19.5.0.0.0-2_amd64.deb
+patch/oracledb/lib/queryStream.js
