--- a/docker/dockerfiles/linux/docker-compose.yml
+++ b/docker/dockerfiles/linux/docker-compose.yml
@@ -3,7 +3,8 @@ services:
 
   ORA2103-01: 
     container_name: ORA2103-01
-    image:  oracle/database:21.3.0-ee
+    # image:  oracle/database:21.3.0-ee
+    image:  yadamu/oracle:21.3.0
     mem_limit: '16gb'
     shm_size: '4gb'
     tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
@@ -18,14 +19,15 @@ services:
       ORACLE_CHARACTERSET: AL32UTF8
     volumes:
       - YADAMU_01-SHARED:/mnt/shared
-      - ORA2103-01-ADMIN:/opt/oracle/admin
+      - ORA2103-01-DATA:/opt/oracle/admin
       - ORA2103-01-DATA:/opt/oracle/oradata
       - ORA2103-01-DIAG:/opt/oracle/diag
     restart: always
 
   ORA1903-01: 
     container_name: ORA1903-01
-    image:  oracle/database:19.3.0-ee
+    # image:  oracle/database:19.3.0-ee
+    image:  yadamu/oracle:19.3.0
     mem_limit: '16gb'
     shm_size: '4gb'
     tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
@@ -40,14 +42,15 @@ services:
       ORACLE_CHARACTERSET: AL32UTF8
     volumes:
       - YADAMU_01-SHARED:/mnt/shared
-      - ORA1903-01-ADMIN:/opt/oracle/admin
+      - ORA1903-01-DATA:/opt/oracle/admin
       - ORA1903-01-DATA:/opt/oracle/oradata
       - ORA1903-01-DIAG:/opt/oracle/diag
     restart: always
 
   ORA1803-01: 
     container_name: ORA1803-01
-    image:  oracle/database:18.3.0-ee
+    # image:  oracle/database:18.3.0-ee
+    image:  yadamu/oracle:18.3.0
     mem_limit: '16gb'
     shm_size: '4gb'
     tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
@@ -62,16 +65,18 @@ services:
       ORACLE_CHARACTERSET: AL32UTF8
     volumes:
       - YADAMU_01-SHARED:/mnt/shared
-      - ORA1803-01-ADMIN:/opt/oracle/admin
+      - ORA1803-01-DATA:/opt/oracle/admin
       - ORA1803-01-DATA:/opt/oracle/oradata
       - ORA1803-01-DIAG:/opt/oracle/diag
     restart: always
 
   ORA1220-01: 
     container_name: ORA1220-01
-    image:  oracle/database:12.2.0.1-ee 
+    # image:  oracle/database:12.2.0.1-ee 
+    image:  yadamu/oracle:12.2.0
     mem_limit: '16gb'
     shm_size: '4gb'
+    
     tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
     networks:
       - YADAMU-NET
@@ -84,36 +89,15 @@ services:
       ORACLE_CHARACTERSET: AL32UTF8
     volumes:
       - YADAMU_01-SHARED:/mnt/shared
-      - ORA1220-01-ADMIN:/opt/oracle/admin
+      - ORA1220-01-DATA:/opt/oracle/admin
       - ORA1220-01-DATA:/opt/oracle/oradata
       - ORA1220-01-DIAG:/opt/oracle/diag
     restart: always
 
-  ORA1210-01: 
-    container_name: ORA1210-01
-    image:  oracle/database:12.1.0.2-ee 
-    mem_limit: '16gb'
-    shm_size: '4gb'
-    tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
-    networks:
-      - YADAMU-NET
-    ports: 
-      - "1524:1521"
-    environment:
-      ORACLE_SID: CDB12100
-      ORACLE_PDB: PDB12100
-      ORACLE_PWD: oracle 
-      ORACLE_CHARACTERSET: AL32UTF8
-    volumes:
-      - YADAMU_01-SHARED:/mnt/shared
-      - ORA1210-01-ADMIN:/opt/oracle/admin
-      - ORA1210-01-DATA:/opt/oracle/oradata
-      - ORA1210-01-DIAG:/opt/oracle/diag
-    restart: always
-
   ORA1120-01: 
     container_name: ORA1120-01
-    image:  oracle/database:11.2.0.4-ee
+    # image:  oracle/database:11.2.0.4-ee
+    image:  yadamu/oracle:11.2.0.4
     mem_limit: '16gb'
     shm_size: '4gb'
     tmpfs: /dev/shm/:rw,nosuid,nodev,exec,size=4g
@@ -128,7 +112,7 @@ services:
       ORACLE_CHARACTERSET: AL32UTF8
     volumes:
       - YADAMU_01-SHARED:/mnt/shared
-      - ORA1120-01-ADMIN:/opt/oracle/admin
+      - ORA1120-01-DATA:/opt/oracle/admin
       - ORA1120-01-DATA:/opt/oracle/oradata
       - ORA1120-01-DIAG:/opt/oracle/diag
     restart: always
@@ -294,7 +278,7 @@ services:
   AZURE-01: 
     container_name: AZURE-01
     image:   mcr.microsoft.com/azure-storage/azurite 
-    command: azurite-blob --blobHost 0.0.0.0 --blobPort 10000
+    command: azurite-blob --blobHost 0.0.0.0 --blobPort 10000 --loose
     networks:
       - YADAMU-NET
     ports: 
@@ -338,9 +322,6 @@ volumes:
   ORA1220-01-ADMIN:
   ORA1220-01-DATA:
   ORA1220-01-DIAG:
-  ORA1210-01-ADMIN:
-  ORA1210-01-DATA:
-  ORA1210-01-DIAG:
   ORA1120-01-ADMIN:
   ORA1120-01-DATA:
   ORA1120-01-DIAG:
